Combined dataset pickle file

--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -10,7 +10,244 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "F:\\WIN temp files\\ipykernel_7780\\924357319.py:8: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 1 complete\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "F:\\WIN temp files\\ipykernel_7780\\924357319.py:8: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 2 complete\n",
+      "File 3 complete\n",
+      "File 4 complete\n",
+      "File 5 complete\n",
+      "File 6 complete\n",
+      "File 7 complete\n",
+      "File 8 complete\n",
+      "File 9 complete\n",
+      "File 10 complete\n",
+      "File 11 complete\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "F:\\WIN temp files\\ipykernel_7780\\924357319.py:8: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 12 complete\n",
+      "File 13 complete\n",
+      "File 14 complete\n",
+      "File 15 complete\n",
+      "File 16 complete\n",
+      "File 17 complete\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "F:\\WIN temp files\\ipykernel_7780\\924357319.py:8: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 18 complete\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "F:\\WIN temp files\\ipykernel_7780\\924357319.py:8: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 19 complete\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "F:\\WIN temp files\\ipykernel_7780\\924357319.py:8: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 20 complete\n",
+      "File 21 complete\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "F:\\WIN temp files\\ipykernel_7780\\924357319.py:8: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 22 complete\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "F:\\WIN temp files\\ipykernel_7780\\924357319.py:8: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 23 complete\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "F:\\WIN temp files\\ipykernel_7780\\924357319.py:8: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 24 complete\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "F:\\WIN temp files\\ipykernel_7780\\924357319.py:8: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 25 complete\n",
+      "Datasets\n"
+     ]
+    }
+   ],
+   "source": [
+    "def load_csv(folder_path):\n",
+    "    dataframes = []\n",
+    "    file = 1\n",
+    "\n",
+    "    for filename in os.listdir(path):\n",
+    "        if filename.endswith('.csv'):\n",
+    "            file_path = os.path.join(folder_path, filename)\n",
+    "            df = pd.read_csv(file_path)\n",
+    "            dataframes.append(df)\n",
+    "            print(\"File\",file,\"complete\")\n",
+    "            file += 1\n",
+    "\n",
+    "    combined_df = pd.concat(dataframes, ignore_index=True)\n",
+    "    return combined_df\n",
+    "\n",
+    "path = \"Datasets\"\n",
+    "df = load_csv(path)\n",
+    "print(path, \"loaded into one df.\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Combined DataFrame saved as pickle file at: C:\\Users\\davev\\PycharmProjects\\FOE_Group_3\\combined_data.pk1\n"
+     ]
+    }
+   ],
+   "source": [
+    "pickle_file_path = os.path.join(path, 'combined_data.pk1')\n",
+    "df.to_pickle(pickle_file_path)\n",
+    "print(f\"DataFrame saved at: {pickle_file_path}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
