--- a/Data Combining.ipynb
+++ b/Data Combining.ipynb
@@ -2,14 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-11-27T10:15:06.087685100Z",
+     "start_time": "2023-11-27T10:15:04.780484500Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mpandas\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mpd\u001B[39;00m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mos\u001B[39;00m\n",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import os"
@@ -44,6 +60,9 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "start_time": "2023-11-27T10:15:06.083695Z"
     }
    }
   },
@@ -60,6 +79,10 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-11-27T10:15:06.355369600Z",
+     "start_time": "2023-11-27T10:15:06.105870200Z"
     }
    }
   },
@@ -72,6 +95,9 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "start_time": "2023-11-27T10:15:06.107874600Z"
     }
    }
   }
