--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -19,8 +19,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Unnamed: 0            timestamp  icao24  latitude  longitude  ground_speed  \\\n",
+      "0           0  2022-10-01 17:22:01  4853d1  52.30436   4.766124           NaN   \n",
+      "1           1  2022-10-01 17:22:02  4853d1  52.30436   4.766124           NaN   \n",
+      "2           2  2022-10-01 17:22:03  4853d1  52.30436   4.766124           NaN   \n",
+      "3           3  2022-10-01 17:22:04  4853d1  52.30436   4.766124           NaN   \n",
+      "4           4  2022-10-01 17:22:05  4853d1  52.30436   4.766124           NaN   \n",
+      "\n",
+      "   track  vertical_rate callsign  onground  alert    spi  squawk  \\\n",
+      "0    NaN            NaN   TRA13Y      True  False  False     NaN   \n",
+      "1    NaN            NaN   TRA13Y      True  False  False     NaN   \n",
+      "2    NaN            NaN   TRA13Y      True  False  False     NaN   \n",
+      "3    NaN            NaN   TRA13Y      True  False  False     NaN   \n",
+      "4    NaN            NaN   TRA13Y      True  False  False     NaN   \n",
+      "\n",
+      "   baro_altitude  altitude            last_position        hour  \n",
+      "0            NaN       NaN  2022-10-01 17:22:00.300  1664636400  \n",
+      "1            NaN       NaN  2022-10-01 17:22:00.300  1664636400  \n",
+      "2            NaN       NaN  2022-10-01 17:22:00.300  1664636400  \n",
+      "3            NaN       NaN  2022-10-01 17:22:00.300  1664636400  \n",
+      "4            NaN       NaN  2022-10-01 17:22:00.300  1664636400  \n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.read_pickle('combined_data.pk1')\n",
     "print(df.head())"
@@ -64,8 +91,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unnamed: 0         int64\n",
+      "timestamp         object\n",
+      "icao24            object\n",
+      "latitude         float64\n",
+      "longitude        float64\n",
+      "ground_speed     float64\n",
+      "track            float64\n",
+      "vertical_rate    float64\n",
+      "callsign          object\n",
+      "onground            bool\n",
+      "alert               bool\n",
+      "spi                 bool\n",
+      "squawk           float64\n",
+      "baro_altitude    float64\n",
+      "altitude         float64\n",
+      "last_position     object\n",
+      "hour               int64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "print(df.dtypes)"
    ],
@@ -208,30 +260,6 @@
     "with open('barcelona_amsterdam_flights.pkl', 'wb') as file:\n",
     "    pickle.dump(barcelona_amsterdam_flights, file)"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
