--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -2,11 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-11-28T10:23:41.742096900Z",
+     "start_time": "2023-11-28T10:23:41.562107600Z"
     }
    },
    "outputs": [],
@@ -19,32 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   Unnamed: 0            timestamp  icao24  latitude  longitude  ground_speed  \\\n",
-      "0           0  2022-10-01 17:22:01  4853d1  52.30436   4.766124           NaN   \n",
-      "1           1  2022-10-01 17:22:02  4853d1  52.30436   4.766124           NaN   \n",
-      "2           2  2022-10-01 17:22:03  4853d1  52.30436   4.766124           NaN   \n",
-      "3           3  2022-10-01 17:22:04  4853d1  52.30436   4.766124           NaN   \n",
-      "4           4  2022-10-01 17:22:05  4853d1  52.30436   4.766124           NaN   \n",
-      "\n",
-      "   track  vertical_rate callsign  onground  alert    spi  squawk  \\\n",
-      "0    NaN            NaN   TRA13Y      True  False  False     NaN   \n",
-      "1    NaN            NaN   TRA13Y      True  False  False     NaN   \n",
-      "2    NaN            NaN   TRA13Y      True  False  False     NaN   \n",
-      "3    NaN            NaN   TRA13Y      True  False  False     NaN   \n",
-      "4    NaN            NaN   TRA13Y      True  False  False     NaN   \n",
-      "\n",
-      "   baro_altitude  altitude            last_position        hour  \n",
-      "0            NaN       NaN  2022-10-01 17:22:00.300  1664636400  \n",
-      "1            NaN       NaN  2022-10-01 17:22:00.300  1664636400  \n",
-      "2            NaN       NaN  2022-10-01 17:22:00.300  1664636400  \n",
-      "3            NaN       NaN  2022-10-01 17:22:00.300  1664636400  \n",
-      "4            NaN       NaN  2022-10-01 17:22:00.300  1664636400  \n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'combined_data.pk1'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[5], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m df \u001B[38;5;241m=\u001B[39m \u001B[43mpd\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mread_pickle\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mcombined_data.pk1\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28mprint\u001B[39m(df\u001B[38;5;241m.\u001B[39mhead())\n",
+      "File \u001B[1;32m~\\PycharmProjects\\FOE_Group_3\\venv\\lib\\site-packages\\pandas\\io\\pickle.py:189\u001B[0m, in \u001B[0;36mread_pickle\u001B[1;34m(filepath_or_buffer, compression, storage_options)\u001B[0m\n\u001B[0;32m    125\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m    126\u001B[0m \u001B[38;5;124;03mLoad pickled pandas object (or any object) from file.\u001B[39;00m\n\u001B[0;32m    127\u001B[0m \n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    186\u001B[0m \u001B[38;5;124;03m4    4    9\u001B[39;00m\n\u001B[0;32m    187\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m    188\u001B[0m excs_to_catch \u001B[38;5;241m=\u001B[39m (\u001B[38;5;167;01mAttributeError\u001B[39;00m, \u001B[38;5;167;01mImportError\u001B[39;00m, \u001B[38;5;167;01mModuleNotFoundError\u001B[39;00m, \u001B[38;5;167;01mTypeError\u001B[39;00m)\n\u001B[1;32m--> 189\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[43mget_handle\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m    190\u001B[0m \u001B[43m    \u001B[49m\u001B[43mfilepath_or_buffer\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    191\u001B[0m \u001B[43m    \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mrb\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[0;32m    192\u001B[0m \u001B[43m    \u001B[49m\u001B[43mcompression\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mcompression\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    193\u001B[0m \u001B[43m    \u001B[49m\u001B[43mis_text\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mFalse\u001B[39;49;00m\u001B[43m,\u001B[49m\n\u001B[0;32m    194\u001B[0m \u001B[43m    \u001B[49m\u001B[43mstorage_options\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mstorage_options\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    195\u001B[0m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m \u001B[38;5;28;01mas\u001B[39;00m handles:\n\u001B[0;32m    196\u001B[0m     \u001B[38;5;66;03m# 1) try standard library Pickle\u001B[39;00m\n\u001B[0;32m    197\u001B[0m     \u001B[38;5;66;03m# 2) try pickle_compat (older pandas version) to handle subclass changes\u001B[39;00m\n\u001B[0;32m    198\u001B[0m     \u001B[38;5;66;03m# 3) try pickle_compat with latin-1 encoding upon a UnicodeDecodeError\u001B[39;00m\n\u001B[0;32m    200\u001B[0m     \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m    201\u001B[0m         \u001B[38;5;66;03m# TypeError for Cython complaints about object.__new__ vs Tick.__new__\u001B[39;00m\n\u001B[0;32m    202\u001B[0m         \u001B[38;5;28;01mtry\u001B[39;00m:\n",
+      "File \u001B[1;32m~\\PycharmProjects\\FOE_Group_3\\venv\\lib\\site-packages\\pandas\\io\\common.py:872\u001B[0m, in \u001B[0;36mget_handle\u001B[1;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001B[0m\n\u001B[0;32m    863\u001B[0m         handle \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mopen\u001B[39m(\n\u001B[0;32m    864\u001B[0m             handle,\n\u001B[0;32m    865\u001B[0m             ioargs\u001B[38;5;241m.\u001B[39mmode,\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    868\u001B[0m             newline\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[0;32m    869\u001B[0m         )\n\u001B[0;32m    870\u001B[0m     \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m    871\u001B[0m         \u001B[38;5;66;03m# Binary mode\u001B[39;00m\n\u001B[1;32m--> 872\u001B[0m         handle \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mopen\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mhandle\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mioargs\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mmode\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    873\u001B[0m     handles\u001B[38;5;241m.\u001B[39mappend(handle)\n\u001B[0;32m    875\u001B[0m \u001B[38;5;66;03m# Convert BytesIO or file objects passed with an encoding\u001B[39;00m\n",
+      "\u001B[1;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: 'combined_data.pk1'"
      ]
     }
    ],
@@ -56,6 +47,10 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-11-28T10:24:04.088077800Z",
+     "start_time": "2023-11-28T10:24:03.986075800Z"
     }
    }
   },
@@ -72,6 +67,9 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "start_time": "2023-11-28T10:23:41.738097Z"
     }
    }
   },
@@ -86,38 +84,16 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "start_time": "2023-11-28T10:23:41.746100600Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Unnamed: 0         int64\n",
-      "timestamp         object\n",
-      "icao24            object\n",
-      "latitude         float64\n",
-      "longitude        float64\n",
-      "ground_speed     float64\n",
-      "track            float64\n",
-      "vertical_rate    float64\n",
-      "callsign          object\n",
-      "onground            bool\n",
-      "alert               bool\n",
-      "spi                 bool\n",
-      "squawk           float64\n",
-      "baro_altitude    float64\n",
-      "altitude         float64\n",
-      "last_position     object\n",
-      "hour               int64\n",
-      "dtype: object\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "print(df.dtypes)"
    ],
@@ -125,6 +101,9 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "start_time": "2023-11-28T10:23:41.754098200Z"
     }
    }
   },
@@ -139,6 +118,9 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "start_time": "2023-11-28T10:23:41.762139800Z"
     }
    }
   },
@@ -153,6 +135,9 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "start_time": "2023-11-28T10:23:41.770098700Z"
     }
    }
   },
@@ -172,6 +157,9 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "start_time": "2023-11-28T10:23:41.782095100Z"
     }
    }
   },
@@ -187,6 +175,9 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "start_time": "2023-11-28T10:23:41.786094Z"
     }
    }
   },
@@ -201,6 +192,9 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "start_time": "2023-11-28T10:23:41.790091Z"
     }
    }
   },
@@ -249,6 +243,9 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "start_time": "2023-11-28T10:23:41.794089200Z"
     }
    }
   },
@@ -264,6 +261,9 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "start_time": "2023-11-28T10:23:41.798116800Z"
     }
    }
   }
