--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "pycharm": {
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-11-28T10:23:41.742096900Z",
-     "start_time": "2023-11-28T10:23:41.562107600Z"
+     "end_time": "2023-11-28T10:52:36.774283500Z",
+     "start_time": "2023-11-28T10:52:36.429071200Z"
     }
    },
    "outputs": [],
@@ -23,24 +23,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'combined_data.pk1'",
+     "ename": "MemoryError",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[5], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m df \u001B[38;5;241m=\u001B[39m \u001B[43mpd\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mread_pickle\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mcombined_data.pk1\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28mprint\u001B[39m(df\u001B[38;5;241m.\u001B[39mhead())\n",
-      "File \u001B[1;32m~\\PycharmProjects\\FOE_Group_3\\venv\\lib\\site-packages\\pandas\\io\\pickle.py:189\u001B[0m, in \u001B[0;36mread_pickle\u001B[1;34m(filepath_or_buffer, compression, storage_options)\u001B[0m\n\u001B[0;32m    125\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m    126\u001B[0m \u001B[38;5;124;03mLoad pickled pandas object (or any object) from file.\u001B[39;00m\n\u001B[0;32m    127\u001B[0m \n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    186\u001B[0m \u001B[38;5;124;03m4    4    9\u001B[39;00m\n\u001B[0;32m    187\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m    188\u001B[0m excs_to_catch \u001B[38;5;241m=\u001B[39m (\u001B[38;5;167;01mAttributeError\u001B[39;00m, \u001B[38;5;167;01mImportError\u001B[39;00m, \u001B[38;5;167;01mModuleNotFoundError\u001B[39;00m, \u001B[38;5;167;01mTypeError\u001B[39;00m)\n\u001B[1;32m--> 189\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[43mget_handle\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m    190\u001B[0m \u001B[43m    \u001B[49m\u001B[43mfilepath_or_buffer\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    191\u001B[0m \u001B[43m    \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mrb\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[0;32m    192\u001B[0m \u001B[43m    \u001B[49m\u001B[43mcompression\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mcompression\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    193\u001B[0m \u001B[43m    \u001B[49m\u001B[43mis_text\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mFalse\u001B[39;49;00m\u001B[43m,\u001B[49m\n\u001B[0;32m    194\u001B[0m \u001B[43m    \u001B[49m\u001B[43mstorage_options\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mstorage_options\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m    195\u001B[0m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m \u001B[38;5;28;01mas\u001B[39;00m handles:\n\u001B[0;32m    196\u001B[0m     \u001B[38;5;66;03m# 1) try standard library Pickle\u001B[39;00m\n\u001B[0;32m    197\u001B[0m     \u001B[38;5;66;03m# 2) try pickle_compat (older pandas version) to handle subclass changes\u001B[39;00m\n\u001B[0;32m    198\u001B[0m     \u001B[38;5;66;03m# 3) try pickle_compat with latin-1 encoding upon a UnicodeDecodeError\u001B[39;00m\n\u001B[0;32m    200\u001B[0m     \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m    201\u001B[0m         \u001B[38;5;66;03m# TypeError for Cython complaints about object.__new__ vs Tick.__new__\u001B[39;00m\n\u001B[0;32m    202\u001B[0m         \u001B[38;5;28;01mtry\u001B[39;00m:\n",
-      "File \u001B[1;32m~\\PycharmProjects\\FOE_Group_3\\venv\\lib\\site-packages\\pandas\\io\\common.py:872\u001B[0m, in \u001B[0;36mget_handle\u001B[1;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001B[0m\n\u001B[0;32m    863\u001B[0m         handle \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mopen\u001B[39m(\n\u001B[0;32m    864\u001B[0m             handle,\n\u001B[0;32m    865\u001B[0m             ioargs\u001B[38;5;241m.\u001B[39mmode,\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    868\u001B[0m             newline\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[0;32m    869\u001B[0m         )\n\u001B[0;32m    870\u001B[0m     \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m    871\u001B[0m         \u001B[38;5;66;03m# Binary mode\u001B[39;00m\n\u001B[1;32m--> 872\u001B[0m         handle \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mopen\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mhandle\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mioargs\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mmode\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    873\u001B[0m     handles\u001B[38;5;241m.\u001B[39mappend(handle)\n\u001B[0;32m    875\u001B[0m \u001B[38;5;66;03m# Convert BytesIO or file objects passed with an encoding\u001B[39;00m\n",
-      "\u001B[1;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: 'combined_data.pk1'"
+      "\u001B[1;31mMemoryError\u001B[0m                               Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[7], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m df \u001B[38;5;241m=\u001B[39m \u001B[43mpd\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mread_pickle\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mDatasets/combined_data.pk1\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28mprint\u001B[39m(df\u001B[38;5;241m.\u001B[39mhead())\n",
+      "File \u001B[1;32m~\\PycharmProjects\\FOE_Group_3\\venv\\lib\\site-packages\\pandas\\io\\pickle.py:206\u001B[0m, in \u001B[0;36mread_pickle\u001B[1;34m(filepath_or_buffer, compression, storage_options)\u001B[0m\n\u001B[0;32m    203\u001B[0m     \u001B[38;5;28;01mwith\u001B[39;00m warnings\u001B[38;5;241m.\u001B[39mcatch_warnings(record\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m):\n\u001B[0;32m    204\u001B[0m         \u001B[38;5;66;03m# We want to silence any warnings about, e.g. moved modules.\u001B[39;00m\n\u001B[0;32m    205\u001B[0m         warnings\u001B[38;5;241m.\u001B[39msimplefilter(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mignore\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;167;01mWarning\u001B[39;00m)\n\u001B[1;32m--> 206\u001B[0m         \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mpickle\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mload\u001B[49m\u001B[43m(\u001B[49m\u001B[43mhandles\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mhandle\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    207\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m excs_to_catch:\n\u001B[0;32m    208\u001B[0m     \u001B[38;5;66;03m# e.g.\u001B[39;00m\n\u001B[0;32m    209\u001B[0m     \u001B[38;5;66;03m#  \"No module named 'pandas.core.sparse.series'\"\u001B[39;00m\n\u001B[0;32m    210\u001B[0m     \u001B[38;5;66;03m#  \"Can't get attribute '__nat_unpickle' on <module 'pandas._libs.tslib\"\u001B[39;00m\n\u001B[0;32m    211\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m pc\u001B[38;5;241m.\u001B[39mload(handles\u001B[38;5;241m.\u001B[39mhandle, encoding\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m)\n",
+      "\u001B[1;31mMemoryError\u001B[0m: "
      ]
     }
    ],
    "source": [
-    "df = pd.read_pickle('combined_data.pk1')\n",
+    "df = pd.read_pickle('Datasets/combined_data.pk1')\n",
     "print(df.head())"
    ],
    "metadata": {
@@ -49,8 +48,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-11-28T10:24:04.088077800Z",
-     "start_time": "2023-11-28T10:24:03.986075800Z"
+     "end_time": "2023-11-28T10:54:32.483871500Z",
+     "start_time": "2023-11-28T10:52:36.449069800Z"
     }
    }
   },
@@ -69,7 +68,7 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "start_time": "2023-11-28T10:23:41.738097Z"
+     "start_time": "2023-11-28T10:54:32.480833300Z"
     }
    }
   },
@@ -86,7 +85,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "start_time": "2023-11-28T10:23:41.746100600Z"
+     "end_time": "2023-11-28T10:54:32.491871200Z",
+     "start_time": "2023-11-28T10:54:32.487832400Z"
     }
    }
   },
@@ -103,7 +103,7 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "start_time": "2023-11-28T10:23:41.754098200Z"
+     "start_time": "2023-11-28T10:54:32.488831700Z"
     }
    }
   },
@@ -120,7 +120,7 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "start_time": "2023-11-28T10:23:41.762139800Z"
+     "start_time": "2023-11-28T10:54:32.490832900Z"
     }
    }
   },
@@ -137,7 +137,7 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "start_time": "2023-11-28T10:23:41.770098700Z"
+     "start_time": "2023-11-28T10:54:32.493835500Z"
     }
    }
   },
@@ -159,7 +159,7 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "start_time": "2023-11-28T10:23:41.782095100Z"
+     "start_time": "2023-11-28T10:54:32.494835600Z"
     }
    }
   },
@@ -177,7 +177,7 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "start_time": "2023-11-28T10:23:41.786094Z"
+     "start_time": "2023-11-28T10:54:32.496839500Z"
     }
    }
   },
@@ -194,7 +194,7 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "start_time": "2023-11-28T10:23:41.790091Z"
+     "start_time": "2023-11-28T10:54:32.498838500Z"
     }
    }
   },
@@ -245,7 +245,7 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "start_time": "2023-11-28T10:23:41.794089200Z"
+     "start_time": "2023-11-28T10:54:32.500838400Z"
     }
    }
   },
@@ -263,7 +263,7 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "start_time": "2023-11-28T10:23:41.798116800Z"
+     "start_time": "2023-11-28T10:54:32.502839200Z"
     }
    }
   }
