--- a/Data Combining.ipynb
+++ b/Data Combining.ipynb
@@ -9,23 +9,11 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-11-27T10:15:06.087685100Z",
-     "start_time": "2023-11-27T10:15:04.780484500Z"
+     "end_time": "2023-11-28T12:52:03.413979100Z",
+     "start_time": "2023-11-28T12:52:00.585874Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[1], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mpandas\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mpd\u001B[39;00m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mos\u001B[39;00m\n",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'pandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os"
@@ -33,8 +21,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\riksc\\AppData\\Local\\Temp\\ipykernel_18072\\1446555581.py:8: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 1 complete\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\riksc\\AppData\\Local\\Temp\\ipykernel_18072\\1446555581.py:8: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 2 complete\n",
+      "File 3 complete\n",
+      "File 4 complete\n",
+      "File 5 complete\n",
+      "File 6 complete\n",
+      "File 7 complete\n",
+      "File 8 complete\n",
+      "File 9 complete\n",
+      "File 10 complete\n",
+      "File 11 complete\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\riksc\\AppData\\Local\\Temp\\ipykernel_18072\\1446555581.py:8: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 12 complete\n",
+      "File 13 complete\n",
+      "File 14 complete\n",
+      "File 15 complete\n",
+      "File 16 complete\n",
+      "File 17 complete\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\riksc\\AppData\\Local\\Temp\\ipykernel_18072\\1446555581.py:8: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 18 complete\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\riksc\\AppData\\Local\\Temp\\ipykernel_18072\\1446555581.py:8: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 19 complete\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\riksc\\AppData\\Local\\Temp\\ipykernel_18072\\1446555581.py:8: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 20 complete\n",
+      "File 21 complete\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\riksc\\AppData\\Local\\Temp\\ipykernel_18072\\1446555581.py:8: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 22 complete\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\riksc\\AppData\\Local\\Temp\\ipykernel_18072\\1446555581.py:8: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 23 complete\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\riksc\\AppData\\Local\\Temp\\ipykernel_18072\\1446555581.py:8: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 24 complete\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\riksc\\AppData\\Local\\Temp\\ipykernel_18072\\1446555581.py:8: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 25 complete\n",
+      "Datasets loaded into one df.\n"
+     ]
+    }
+   ],
    "source": [
     "def load_csv(folder_path):\n",
     "    dataframes = []\n",
@@ -62,14 +217,25 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "start_time": "2023-11-27T10:15:06.083695Z"
+     "end_time": "2023-11-28T12:54:41.052487800Z",
+     "start_time": "2023-11-28T12:52:03.413979100Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "pickle_file_path = os.path.join(path, 'combined_data.pk1')\n",
     "df.to_pickle(pickle_file_path)\n",
@@ -81,8 +247,7 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-11-27T10:15:06.355369600Z",
-     "start_time": "2023-11-27T10:15:06.105870200Z"
+     "start_time": "2023-11-28T12:54:39.530974700Z"
     }
    }
   },
@@ -97,7 +262,7 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "start_time": "2023-11-27T10:15:06.107874600Z"
+     "start_time": "2023-11-28T12:57:31.109425400Z"
     }
    }
   }
